--- a/index (2).html
+++ b/index (2).html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <h1>Calculator By Ragini</h1>
+        <h1>Calculator By imran</h1>
 
         <div class="calculator">
             <input type="text" name="screen" id="screen">
